--- a/pipelines/dbx-pipeline.yml
+++ b/pipelines/dbx-pipeline.yml
@@ -21,7 +21,7 @@ jobs:
 
   - task: AzureKeyVault@1
     inputs:
-      azureSubscription: 'AdvancingAnalytics_6000(6392d180-7beb-4851-8c38-8d32bb52555f)'
+      azureSubscription: '[subscriptionid]'
       KeyVaultName: 'devops-for-dbx-kv'
       SecretsFilter: '*'
       RunAsPreJob: false
@@ -92,7 +92,7 @@ jobs:
 #   steps:
 #     - task: AzureKeyVault@1
 #       inputs:
-#         azureSubscription: 'AdvancingAnalytics_6000(6392d180-7beb-4851-8c38-8d32bb52555f)'
+#         azureSubscription: '[subscriptionid]'
 #         KeyVaultName: 'devops-for-dbx-kv'
 #         SecretsFilter: '*'
 #         RunAsPreJob: false
@@ -123,7 +123,10 @@ jobs:
   steps:
     - task: AzureKeyVault@1
       inputs:
-        azureSubscription: 'AdvancingAnalytics_6000(6392d180-7beb-4851-8c38-8d32bb52555f)'
+        
+        
+        
+        : '[subscriptionid]'
         KeyVaultName: 'devops-for-dbx-kv'
         SecretsFilter: '*'
         RunAsPreJob: false
