added global clusterid env var

--- a/.github/workflows/databricks-action.yml
+++ b/.github/workflows/databricks-action.yml
@@ -100,7 +100,16 @@ jobs:
         DBRKS_RESOURCE_GROUP: ${{ steps.getAzureSecrets.outputs.ResourceGroup }}
         DBRKS_WORKSPACE_NAME: ${{ steps.getAzureSecrets.outputs.WorkspaceName }}
         DBRKS_INSTANCE: ${{ steps.getAzureSecrets.outputs.DBXInstance }}
-                
+
+    - name: Restart Cluster
+      run: |
+        python pipelineScripts/restart_cluster.py
+      env: 
+        DefaultWorkingDirectory: ""
+        DBRKS_SUBSCRIPTION_ID: ${{ steps.getAzureSecrets.outputs.SubscriptionID }}
+        DBRKS_RESOURCE_GROUP: ${{ steps.getAzureSecrets.outputs.ResourceGroup }}
+        DBRKS_WORKSPACE_NAME: ${{ steps.getAzureSecrets.outputs.WorkspaceName }}
+        DBRKS_INSTANCE: ${{ steps.getAzureSecrets.outputs.DBXInstance }}
 
         
         
