check wheel status

--- a/.github/workflows/databricks-action.yml
+++ b/.github/workflows/databricks-action.yml
@@ -91,7 +91,7 @@ jobs:
         DBRKS_WORKSPACE_NAME: ${{ steps.getAzureSecrets.outputs.WorkspaceName }}
         DBRKS_INSTANCE: ${{ steps.getAzureSecrets.outputs.DBXInstance }}
 
-    - name: Install Wheel
+    - name: install wheel
       run: |
         python pipelineScripts/install_wheel.py
       env: 
@@ -101,9 +101,19 @@ jobs:
         DBRKS_WORKSPACE_NAME: ${{ steps.getAzureSecrets.outputs.WorkspaceName }}
         DBRKS_INSTANCE: ${{ steps.getAzureSecrets.outputs.DBXInstance }}
 
-    - name: Restart Cluster
+    - name: restart cluster
       run: |
         python pipelineScripts/restart_cluster.py
+      env: 
+        DefaultWorkingDirectory: ""
+        DBRKS_SUBSCRIPTION_ID: ${{ steps.getAzureSecrets.outputs.SubscriptionID }}
+        DBRKS_RESOURCE_GROUP: ${{ steps.getAzureSecrets.outputs.ResourceGroup }}
+        DBRKS_WORKSPACE_NAME: ${{ steps.getAzureSecrets.outputs.WorkspaceName }}
+        DBRKS_INSTANCE: ${{ steps.getAzureSecrets.outputs.DBXInstance }}
+
+    - name: check wheel status
+      run: |
+        python pipelineScripts/check_wheel_status.py
       env: 
         DefaultWorkingDirectory: ""
         DBRKS_SUBSCRIPTION_ID: ${{ steps.getAzureSecrets.outputs.SubscriptionID }}
